# pyiron_module_template

./: .gitignore  .readthedocs.yml  CONTRIBUTING.rst  README.md  pyproject.toml  setup.py  update_module_name.sh
.binder/: environment.yml  postBuild
.ci_support/: environment-docs.yml  environment-notebooks.yml  environment.yml  lower-bounds.yml
.github/workflows/: black.yml  coverage.yml  daily.yml  dependabot-pr.yml  docs.yml  format_black.yml  integration_tests.yml  notebooks.yml  pr-labeled.yml  pr-target-opened.yml  preview-release.yml  push-pull-main.yml  push-pull.yml  release.yml  unittests.yml  weekly.yml
binder/: environment.yml
docs/: README.md  conf.py  environment.yml  index.rst
notebooks/: example.ipynb  version.ipynb
pyiron_module/: _version.py
pyiron_module_template/: __init__.py  _version.py
tests/unit/: test_tests.py
